<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_mpnet_planner</name>
  <version>1.0.0</version>
  <description>MoveIt planner plugin using MPNet</description>
  <maintainer email="rolando.j.nieves@knights.ucf.edu">Rolando J. Nieves</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend version_gte="1.11.2">pluginlib</depend>
  <depend>moveit_msgs</depend>
  <depend>ompl</depend>
  <depend>moveit_planners_ompl</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>moveit_resources</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/moveit_mpnet_planner_plugin_description.xml"/>
  </export>
</package>
